added new url routes /group-user and /group-location to seperate them from /groups and updated swagger comments to reflect the change
