# pkg/group_user/controller.go
@@ -21,12 +21,12 @@ func New(configuration *config.Config) *GroupUserConfig {
 
 // @Summary		Add user to group
 // @Description	Add a user to a group
-// @Tags			groups
+// @Tags			group-user
 // @Accept			json
 // @Produce		json
 // @Param			request	body		models.GroupUserRequest	true	"Group ID and User ID"
 // @Success		200		{object}	map[string]string
-// @Router			/groups/users [post]
+// @Router			/group-user [post]
 func (config *GroupUserConfig) PostUserToGroupHandler(w http.ResponseWriter, r *http.Request) {
 	req := &models.GroupUserRequest{}
 	if err := render.Bind(r, req); err != nil {
@@ -46,11 +46,11 @@ func (config *GroupUserConfig) PostUserToGroupHandler(w http.ResponseWriter, r *
 
 // @Summary		Get all group-user associations
 // @Description	Retrieve all group-user associations
-// @Tags			groups
+// @Tags			group-user
 // @Accept			json
 // @Produce		json
 // @Success		200	{array}	models.GroupUserResponse
-// @Router			/groups/users [get]
+// @Router			/group-user [get]
 func (config *GroupUserConfig) GetAllGroupUserHandler(w http.ResponseWriter, r *http.Request) {
 	groupUsers, err := config.GroupUserEntryRepository.FindAll()
 	if err != nil {
@@ -71,13 +71,13 @@ func (config *GroupUserConfig) GetAllGroupUserHandler(w http.ResponseWriter, r *
 
 // @Summary		Delete user from group
 // @Description	Remove a user from a group
-// @Tags			groups
+// @Tags			group-user
 // @Accept			json
 // @Produce		json
 // @Param			id		path		int	true	"Group ID"
 // @Param			userID	path		int	true	"User ID"
 // @Success		200		{string}	string	"Successfully removed user from group"
-// @Router			/groups/{id}/users/{userID} [delete]
+// @Router			/group-user/{id}/users/{userID} [delete]
 func (config *GroupUserConfig) DeleteUserFromGroupHandler(w http.ResponseWriter, r *http.Request) {
 	groupID, err := strconv.Atoi(chi.URLParam(r, "id"))
 	if err != nil {
