# pkg/user/routes.go
@@ -18,12 +18,12 @@ Users:
 func Routes(configuration *config.Config) chi.Router {
 	UserConfig := New(configuration)
 	router := chi.NewRouter()
-	router.Post("/users", UserConfig.PostUserHandler)
-	router.Get("/users", UserConfig.GetAllUserHandler) // FOR DEBUG ONLY
-	router.Get("/users/{id}", UserConfig.GetUserByEmailHandler)
-	router.Put("/users/{id}", UserConfig.PutUserHandler)
-	router.Delete("/users/{id}", UserConfig.DeleteUserHandler)
-	router.Get("/users/{id}/locations", UserConfig.GetLocationsForUserHandler)
-	router.Get("/users/{id}/groups", UserConfig.GetGroupsForUserHandler)
+	router.Post("/", UserConfig.PostUserHandler)
+	router.Get("/", UserConfig.GetAllUserHandler) // FOR DEBUG ONLY
+	router.Get("/{id}", UserConfig.GetUserByEmailHandler)
+	router.Put("/{id}", UserConfig.PutUserHandler)
+	router.Delete("/{id}", UserConfig.DeleteUserHandler)
+	router.Get("/{id}/locations", UserConfig.GetLocationsForUserHandler)
+	router.Get("/{id}/groups", UserConfig.GetGroupsForUserHandler)
 	return router
 }
